# anagram-finder

./: CMakeLists.txt  README.md  io.cpp  io.h  main.cpp
Algorithm/: AnagramChain.cpp  AnagramChain.h  Dictionary.cpp  Dictionary.h
helpers/: WordFuncs.cpp  WordFuncs.h
